corrected card spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,13 @@
  *= require_tree .
  *= require_self
  */
+
+.card-img-top {
+    width: 100%;
+    height: 22vw;
+    object-fit: cover;
+} 
+
+.col-sm-4 {
+    height: 500px;
+}
